--- a/HBPWebUI/Views/Browse/Product.cshtml
+++ b/HBPWebUI/Views/Browse/Product.cshtml
@@ -137,7 +137,7 @@
 </form>
 
 @section Breadcrumb {
-    <li class="breadcrumb-item active" aria-current="page">@Model.Name</li>
+    <li class="breadcrumb-item active" aria-current="page">@Model.ShortName</li>
 }
 
 <script>
