--- a/HBPWebUI/Views/Shared/_Layout.cshtml
+++ b/HBPWebUI/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Browse" asp-action="Index">Browse</a></li>
                         @foreach (var category in categories)
                         {
                             <li class="nav-item dropdown">
@@ -128,7 +129,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li class="breadcrumb-item active">@ViewContext.RouteData.Values["controller"].ToString()</li>
+                    <li class="breadcrumb-item active"><a asp-area="" asp-controller="@ViewContext.RouteData.Values["controller"].ToString()" asp-action="Index">@ViewContext.RouteData.Values["controller"].ToString()</a></li>
                     @RenderSection("Breadcrumb", required: false)
                 </ol>
             </nav>
@@ -137,16 +138,28 @@
     @RenderBody()
     <div class="container">
         <footer class="py-5">
-        <div class="d-flex justify-content-between">
-            <div class="col-2 mw-30">
+        <div class="d-flex">
+            <div class="col-5">
                 <h5>Shopping</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Shop</a></li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-muted" 
+                            asp-area=""
+                            asp-controller="Browse"
+                            asp-action="Index">Browse
+                        </a>
+                    </li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Subscriptions</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Basket</a></li>
+                    <li class="nav-item mb-2">
+                        <a class="nav-link p-0 text-muted"
+                            asp-area=""
+                            asp-controller="Home"
+                            asp-action="Basket">Basket
+                        </a>
+                    </li>
                 </ul>
             </div>
-            <div class="col-4 offset-1 mw-60">
+            <div class="col-6 offset-1">
                 <form>
                     <h5>Subscribe to our newsletter</h5>
                     <p>Monthly digest of whats new and exciting from us.</p>
