Move helpers to UI and more
Moves the Helper classes which translate products into their view model has been moved to the UI.

All references to the nested category in the API has been removed.

Translating classes into their view model has been moved from the endpoint to the controller.

--- a/HBPWebUI/Views/Browse/Index.cshtml
+++ b/HBPWebUI/Views/Browse/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<HBPUI.Library.Models.NestedCategoryModel>
+﻿@model List<HBPWebUI.Models.CategoryViewModel>
 @{
     ViewData["Title"] = "All Categories";
 }
