Add category view and more
Adds category view which displays all subcategories and types.

Update breadcrumbs to remove links on certain navigations.

Update mobile UI to display product basket notifications on the top of the page, instead of below the add to basket button,

--- a/HBPWebUI/Views/Browse/Categories.cshtml
+++ b/HBPWebUI/Views/Browse/Categories.cshtml
@@ -65,26 +65,9 @@
         <a 
             asp-area="" 
             asp-controller="Browse" 
-            asp-action="Index">@categoryName
+            asp-action="Category">@categoryName
         </a>
     </li>
-    <li class="breadcrumb-item active">
-        <a 
-            asp-area="" 
-            asp-controller="Browse" 
-            asp-action="Categories" 
-            asp-route-category="@categoryName" 
-            asp-route-subcategory="@subcategoryName">@subcategoryName
-        </a>
-    </li>
-    <li class="breadcrumb-item active" aria-current="page">
-        <a 
-            asp-area="" 
-            asp-controller="Browse" 
-            asp-action="Categories" 
-            asp-route-category="@categoryName" 
-            asp-route-subcategory="@subcategoryName" 
-            asp-route-type="@typeName">@typeName
-        </a>
-    </li>
+    <li class="breadcrumb-item" aria-current="page">@subcategoryName</li>
+    <li class="breadcrumb-item" aria-current="page">@typeName</li>
 }
