--- a/HBPWebUI/Views/Browse/Index.cshtml
+++ b/HBPWebUI/Views/Browse/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<HBPWebUI.Models.CategoryViewModel>
+﻿@model List<HBPWebUI.Models.CategoriesViewModel>
 @{
     ViewData["Title"] = "All Categories";
 }
